[package]
name = "Brawlhalla-Map-Theme-Manager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
tokio = { version = "1.17.0", features = ['full'] }
rayon = "1.5.1"

[profile.release]
strip = true