[package]
name = "Brawlhalla-Map-Theme-Manager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ['blocking'] }
tokio = { version = "1.17.0", features = ['full'] }
home = "0.5.3"
zip-extract = "0.1.1"
# rayon = "1.5.1"

[profile.release]
strip = true